--- a/paper/Reduction.lagda.tex
+++ b/paper/Reduction.lagda.tex
@@ -70,7 +70,7 @@ $\AgdaFunction{dual}~A$ of $x$ in $P$ is the first in the typing context,
 indicating that it is the newest channel that $P$ is aware of. However, after
 the reduction, $x$ is replaced by $y$ which is found \emph{somewhere} within
 $\Context$. The exact location of $y$ in $\ContextC$ is found in the splitting
-$p$. We ``rename'' $x$ into $y$ within $P$ using the permutation
+$p$, thus we ``rename'' $x$ into $y$ within $P$ using the permutation
 $\AgdaFunction{↭concat}~p$.
 
 The constructor \AgdaInductiveConstructor{r-close} models \RClose:
