--- a/paper/Examples.lagda.tex
+++ b/paper/Examples.lagda.tex
@@ -17,36 +17,34 @@ open import Process
 open import DeadlockFreedom using (deadlock-freedom)
 \end{code}
 
-In this section we illustrate a few simple examples of processes encoded in our
-formalization. We start by encoding the type of a boolean value being produced
-as a choice between ``going left'' (which we interpret as true) and ``going
-right'' (which we interpret as false).
+In this section we revisit and expand the sample processes discussed in
+\Cref{ex:booleans,ex:echo} and show their encoding in our formalization. The
+encoding of $\Bool$ is straightforward.
 
 \begin{code}
 𝔹 : Type
 𝔹 = 𝟙 ⊕ 𝟙
 \end{code}
 
-The boolean constants are processes that perform one of these choices.
-
+The boolean constants are encoded thus:
 \begin{code}
-true : Proc [ 𝔹 ]
-true = select (ch ⟨ < ≫ ⟩ inj₁ (close ch))
+True : Proc [ 𝔹 ]
+True = select (ch ⟨ < ≫ ⟩ inj₁ (close ch))
 
-false : Proc [ 𝔹 ]
-false = select (ch ⟨ < ≫ ⟩ inj₂ (close ch))
+False : Proc [ 𝔹 ]
+False = select (ch ⟨ < ≫ ⟩ inj₂ (close ch))
 \end{code}
 
-We can use the host language for programming higher-order processes. For
-example, we can define a conditional process thus:
+We can take advantage of the host language for programming higher-order
+processes. For example, we can define a conditional process thus:
 
 \begin{code}
-if_else : ∀{Γ} → Proc Γ → Proc Γ → Proc (dual 𝔹 ∷ Γ)
-if P else Q = curry∗ case ch (< ≫) ( wait (ch ⟨ < ≫ ⟩ P)
+If_Else : ∀[ Proc ⇒ Proc ⇒ (dual 𝔹 ∷_) ⊢ Proc ]
+If P Else Q = curry∗ case ch (< ≫) ( wait (ch ⟨ < ≫ ⟩ P)
                                    , wait (ch ⟨ < ≫ ⟩ Q))
 \end{code}
 
-A term $\AgdaFunction{if}~P~\AgdaFunction{else}~Q$ is a process that waits for a
+A term $\AgdaFunction{If}~P~\AgdaFunction{Else}~Q$ is a process that waits for a
 boolean value (\cf the $\AgdaFunction{dual}~\mathbb{B}$ type at the front of its
 typing context) and continues as either $P$ or $Q$ depending on whether it
 receives true or false. We use \AgdaFunction{curry∗} (defined in
@@ -54,12 +52,12 @@ receives true or false. We use \AgdaFunction{curry∗} (defined in
 \AgdaInductiveConstructor{case} so that we can supply its arguments one by one
 saving a few parentheses and reducing clutter.
 
-Next we define a process $\AgdaFunction{drop}~P$ that consumes a boolean and
+Next we define a process $\AgdaFunction{Drop}~P$ that consumes a boolean and
 continues as $P$ regardless of its value.
 
 \begin{code}
-drop : ∀{Γ} → Proc Γ → Proc (dual 𝔹 ∷ Γ)
-drop P = if P else P
+Drop : ∀[ Proc ⇒ (dual 𝔹 ∷_) ⊢ Proc ]
+Drop P = If P Else P
 \end{code}
 
 Using these higher-order forms, it is easy to define the usual boolean
@@ -67,12 +65,12 @@ connectives.
 
 \begin{code}
 !!_ : Proc [ 𝔹 ] → Proc [ 𝔹 ]
-!!_ B = curry∗ cut B ≫ (if false else true)
+!!_ B = curry∗ cut B ≫ (If False Else True)
 
 _&&_ _||_  : Proc [ 𝔹 ] → Proc [ 𝔹 ] → Proc [ 𝔹 ]
 A && B   =  curry∗ cut A ≫ $
             curry∗ cut B ≫ $
-            if (curry∗ link ch (< ≫) ch) else (drop false)
+            If (curry∗ link ch (< ≫) ch) Else (Drop False)
 A || B   = !! ((!! A) && (!! B))
 \end{code}
 
@@ -95,38 +93,36 @@ as terminating.
 
 \begin{code}
 {-# TERMINATING #-}
-eval : ∀{Γ} → Proc Γ → Proc Γ
+eval : ∀[ Proc ⇒ Proc ]
 eval P with deadlock-freedom P
 ... | inj₁ (Q , _ , _)  = Q
 ... | inj₂ (Q , _)      = eval Q
 \end{code}
 
 Now if we ask Agda to normalize the goal
-$\AgdaFunction{eval}~(\AgdaFunction{false}~\AgdaFunction{||}~\AgdaFunction{false})$
+$\AgdaFunction{eval}~(\AgdaFunction{False}~\AgdaFunction{||}~\AgdaFunction{False})$
 we obtain
 $\AgdaInductiveConstructor{select}~(\AgdaInductiveConstructor{ch~⟨~<~•~⟩~inj₂}~(\AgdaInductiveConstructor{close~ch}))$,
-that is the definition of \AgdaFunction{false}, as expected.
+that is the definition of \AgdaFunction{False}, as expected.
 
-For the example that follows, it is convenient to introduce the linear
-implication connective according to the standard definition $A \multimap B
-\eqdef \dual{A} \Par B$.
+For the encoding of the echo server (\Cref{ex:echo}), it is convenient to
+introduce the linear implication connective according to the standard definition
+$A \multimap B \eqdef \dual{A} \Par B$.
 
 \begin{code}
 _⊸_ : ∀{n} → PreType n → PreType n → PreType n
 A ⊸ B = dual A ⅋ B
 \end{code}
 
-Below we define a persistent, polymorphic echo \AgdaInductiveConstructor{server}
-that waits for a value and sends it back unchanged. The server is polymorphic in
-the sense that the type of the value is arbitrary and denoted by the type
-variable $X$. The notation $\AgdaFunction{\#}~n$ is defined in Agda's standard
-library and creates an element of \AgdaDatatype{Fin} from the natural number
-$n$.
+Recall that the server is polymorphic in the sense that the type of the value it
+receives and sends back is arbitrary and denoted by a type variable $X$. The
+notation $\AgdaFunction{\#}~n$ is defined in Agda's standard library and creates
+an element of \AgdaDatatype{Fin} from the natural number $n$.
 
 \begin{code}
-echo : let X = var (# 0) in
+Echo : let X = var (# 0) in
        Proc [ `! (`∀ (X ⊸ X)) ]
-echo = curry∗ server ch (< ≫)
+Echo = curry∗ server ch (< ≫)
              ( un-[]
              , curry∗ all ch (< ≫) λ X →
                curry∗ join ch (< ≫) $
@@ -137,22 +133,22 @@ We can test the server by connecting it with a \AgdaInductiveConstructor{client}
 that sends true to it.
 
 \begin{code}
-echo-true : Proc [ 𝔹 ]
-echo-true = curry∗ cut echo ≫ $
+Echo-True : Proc [ 𝔹 ]
+Echo-True = curry∗ cut Echo ≫ $
             curry∗ client ch (< ≫) $
             curry∗ ex ch (< ≫) $
-            curry∗ fork ch (< ≫) $ true ⟨ ≫ ⟩ curry∗ link ch (< ≫) ch
+            curry∗ fork ch (< ≫) $ True ⟨ ≫ ⟩ curry∗ link ch (< ≫) ch
 \end{code}
 
-If we ask Agda to evaluate this process we obtain \AgdaFunction{true}, as
+If we ask Agda to evaluate this process we obtain \AgdaFunction{True}, as
 expected.
 
 From these examples it should be clear that writing \Calculus processes in Agda
-is not entirely straightforward, but it is still doable with a little effort.
-The lack of names (for channels) clearly obfuscates the code, but the context
-splittings that must be provided are usually small and fairly easy to
-understand. Most importantly, the use of \AgdaFunction{≫} helps truncating
-context splittings as soon as the seeked channel has been reached.
+is not entirely straightforward and requires a little effort. The lack of names
+(for channels) clearly obfuscates the code, but the context splittings that must
+be provided are usually small and fairly easy to understand. Most importantly,
+the use of \AgdaFunction{≫} helps truncating context splittings as soon as the
+seeked channel has been reached.
 %
 Either way, the formalization is meant to study the meta-theory of \Calculus
 rather than implementing a user-friendly DSL for it.
