examples in subsection

--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -106,8 +106,8 @@ key aspects with particular emphasis on the representation of channel names and
 of typing contexts. We assume that the reader is somewhat knowledgeable about
 Agda, but we also recall a few key definitions from Agda's standard library.
 %
-\Cref{sec:examples} illustrates some examples of \LCP processes as they are
-represented in Agda and shows how to use Agda as an interpreter for \LCP.
+% \Cref{sec:examples} illustrates some examples of \LCP processes as they are
+% represented in Agda and shows how to use Agda as an interpreter for \LCP.
 %
 \Cref{sec:related} discusses related work more in detail by providing a
 qualitative and quantitative comparison between the known formalizations of
