revised related work

--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -1,6 +1,21 @@
 \section{Concluding Remarks}
 \label{sec:conclusion}
 
+In this work we have focused on models and theories of \emph{binary sessions},
+but there are also formalizations of \emph{multiparty session types}, notably
+those of \citet{JacobsBalzerKrebbers22a} and \citet{TiroreBengstonCarbone25},
+which are notoriously more complex than those of binary session types. Just to
+give an example, the formalization of \citet{TiroreBengstonCarbone25} amounts to
+more than 1Mb of Coq code.
+
+FARE CONFRONTO TRA LCP E IL CALCOLO NELLA CHALLENGE PER DIRE CHE NON SI RIESCONO
+A MODELLARE TUTTI I PROCESSI, MAGARI SI PUÒ FARE UN ESEMPIO NELLA SEZIONE SUL
+CALCOLO.
+
+PARLARE DI CP E DI PI CALCOLO LINEARE
+
+BELLIN E SCOTT?
+
 context splitting hard to read but overall doable
 
 working with an intrinsically typed calculus drastically reduces the number of
