--- a/paper/main.bib
+++ b/paper/main.bib
@@ -363,6 +363,24 @@
   url          = {https://tel.archives-ouvertes.fr/tel-01676953},
 }
 
+@inproceedings{Allais17,
+  author       = {Guillaume Allais},
+  editor       = {Andreas Abel and
+                  Fredrik Nordvall Forsberg and
+                  Ambrus Kaposi},
+  title        = {Typing with Leftovers - {A} mechanization of Intuitionistic Multiplicative-Additive
+                  Linear Logic},
+  booktitle    = {23rd International Conference on Types for Proofs and Programs, {TYPES}
+                  2017, Budapest, Hungary, May 29 - June 1, 2017},
+  series       = {LIPIcs},
+  volume       = {104},
+  pages        = {1:1--1:22},
+  publisher    = {Schloss Dagstuhl - Leibniz-Zentrum f{\"{u}}r Informatik},
+  address      = {Germany},
+  year         = {2017},
+  doi          = {10.4230/LIPICS.TYPES.2017.1},
+}
+
 @inproceedings{BaeldeDoumaneSaurin16,
   author       = {David Baelde and
                   Amina Doumane and
