--- a/paper/related.tex
+++ b/paper/related.tex
@@ -3,14 +3,13 @@
 
 We have compared our formalization with others that have appeared in the
 literature and for which we were able to retrieve the source code. We have
-looked at those formalizations that include the following characteristics:
+looked at those formalizations that include the following features:
 \begin{itemize}
-\item syntax and reduction/evaluation semantics for a calculus with support for
-    binary sessions, either natively or through their encoding in terms of
-    linear channels~\cite{KobayashiPierceTurner99,Kobayashi02b};
+\item reduction/evaluation semantics for a calculus with support for binary
+    sessions, either natively or through their encoding in terms of linear
+    channels~\cite{KobayashiPierceTurner99,Kobayashi02b};
 \item a type system along with the usual typing preservation results;
-\item a proof of global progress/deadlock freedom, for those type systems that
-    enforce it.
+\item optionally, a proof of global progress/deadlock freedom.
 \end{itemize}
 
 \citet{GotoEtAl16} describe the formalization of a session-based variant of the
@@ -21,12 +20,25 @@ not publicly available any more).
 
 \citet{Thiemann19} formalizes a subset of \GV~\citep{GayVasconcelos10}, a
 functional language extended with session communication primitives, along with
-an interpreter.
+an interpreter. \citet{CicconePadovani20} have taken inspiration from Thiemann's
+work to formalize a variant of the linear
+$\pi$-calculus~\cite{KobayashiPierceTurner99} that supports dependent types, so
+as to enable the description of communication protocols whose structure depends
+on the content of messages.
+
+\citet{CastroFerreiraYoshida20} describe EMTST, a library for the formalization
+of session type systems which includes as case studies the session calculus of
+\citet{HondaVasconcelosKubo98} (called ``original system'') and a revised
+version of it that is more amenable to be formalized using a locally nameless
+representation of channels.
 
 \citet{RouvoetPoulsenKrebbersVisser20} present a library of abstractions
 inspired to separation logic aiding the formalization of interpreters for
 computing models supported by linear type systems. One of the presented case
-studies is the formalization of a fragment of \GV~\citep{Wadler14}.
+studies is the formalization of a fragment of \GV~\citep{Wadler14}. The
+separating conjunction we have introduced in \Cref{sec:context-agda} and the
+typing of the constructors for the representation of processes in
+\Cref{sec:process-agda} have been heavily inspired by this work. 
 
 % as case study for their approach based on separation logic, which we have
 % partially taken inspiration from for the representation of processes
@@ -35,26 +47,25 @@ studies is the formalization of a fragment of \GV~\citep{Wadler14}.
 % own, but their formalization focuses on the implementation of an interpreter (no
 % small-step semantics is defined) and subject reduction is 
 
-\citet{CastroFerreiraYoshida20} describe EMTST, a library for the formalization
-of session type systems which includes as case studies the session calculus of
-\citet{HondaVasconcelosKubo98} (called ``original system'') and a revised
-version of it that is more amenable to be formalized using a locally nameless
-representation of channels.
-
-\citet{CicconePadovani20} formalize a variant of the linear
-$\pi$-calculus~\cite{KobayashiPierceTurner99} that supports dependent types, so
-as to enable the description of communication protocols whose structure depends
-on the content of exchanged messages.
-
-All the formalizations mentioned make use of context splitting. In contrast,
-\citet{ZalakainDardha21} formalize a generalization of the linear $\pi$-calculus
-which is parametric in a \emph{usage algebra} (to account for channel
-sharing/linearity) and that is based on \emph{leftover typing}~\cite{}. The
-basic idea is that a process is typed with respect to an \emph{input context},
+All the formalizations mentioned so far make use of context splitting. In
+contrast, \citet{ZalakainDardha21} formalize a generalization of the linear
+$\pi$-calculus which is parametric in a \emph{usage algebra} (to account for
+channel sharing/linearity) and that is based on \emph{leftover
+typing}~\cite{Allais17}. 
+%
+With leftover typing a process is typed with respect to an \emph{input context},
 which describes the overall available channels, and an \emph{output context},
-which describes the remaining channels not consumed by the process. In this way,
-it is possible to ``concatenate'' typing judgments instead of splitting them
-beforehand.
+which describes the residual channels not consumed by the process. In this way,
+it is possible to ``concatenate'' typing judgments instead of splitting typing
+contexts beforehand. As \citet{ZalakainDardha21} nicely summarize, ``context
+splits contain usage information that is already present'' in processes, and
+therefore can be omitted. This is true, but only provided that channels are
+given a \emph{name} in processes (\citet{ZalakainDardha21} use de Bruijn indices
+to this aim). In fact, the co-de Bruijn representation of
+processes~\cite{McBride18}, whereby channels are nameless and context splitting
+is performed eagerly, can be seen as the ``dual approach'' of leftover typing:
+channel names provide information that is already present in their (singleton)
+typing context, hence they can be omitted from contexts and processes.
 
 Another work based on context splitting is the one by
 \citet{JacobsBalzerKrebbers22}, who formalize a library of \emph{connectivity
@@ -62,11 +73,14 @@ graphs} for reasoning and enforcing deadlock freedom in a variant of
 \GV~\citep{GayVasconcelos10,Wadler14}. This is the first formalization of
 deadlock freedom for a calculus of sessions.
 
-Motivated by the technical difficulties arising from the splitting of typing
-contexts, \citet{SanoKavanaghPientka23} propose an alternative approach based on
-\emph{linearity predicates}. The key idea is to treat typing contexts
-structurally and to enforce the linear usage of channels by checking the
-syntactical occurrence of channels within processes.
+Motivated by the technical difficulties arising from context splits,
+\citet{SanoKavanaghPientka23} model a structural version of \CP using an
+alternative approach based on \emph{linearity predicates}. The key idea is to
+treat typing contexts structurally and to enforce the linear usage of sessions
+by checking the syntactical occurrence of channels within processes.
+Interestingly, the approach relies on the \emph{explicit naming of
+continuations} so as to precisely account for the number of times a channel is
+actually used.
 
 \citet{ZackonEtAl25} describe yet another approach to the handling of typing
 contexts whereby channels are associated not just with a type but also with a
@@ -103,7 +117,7 @@ which are conveninently combined using operations from the resource algebra.
         \citet{GotoEtAl16} &
         Coq &
         \SessionPI &
-        splitting &
+        splits &
         loc. nameless &
         \NO &
         \NO &
@@ -119,7 +133,7 @@ which are conveninently combined using operations from the resource algebra.
         \citet{Thiemann19} &
         Agda &
         \GV &
-        splitting &
+        splits &
         co-de Bruijn &
         \YES &
         \MAYBE &
@@ -135,7 +149,7 @@ which are conveninently combined using operations from the resource algebra.
         \citet{RouvoetPoulsenKrebbersVisser20} &
         Agda &
         \GV &
-        splitting &
+        splits &
         co-de Bruijn &
         \YES &
         \MAYBE &
@@ -151,7 +165,7 @@ which are conveninently combined using operations from the resource algebra.
         \citet{CastroFerreiraYoshida20} &
         Coq &
         \SessionPI &
-        splitting &
+        splits &
         loc. nameless &
         \NO &
         \NO &
@@ -167,7 +181,7 @@ which are conveninently combined using operations from the resource algebra.
         \citet{CicconePadovani20} &
         Agda &
         \LinearPI & 
-        splitting &
+        splits &
         co-de Bruijn &
         \YES &
         \YES &
@@ -199,7 +213,7 @@ which are conveninently combined using operations from the resource algebra.
         \citet{JacobsBalzerKrebbers22} &
         Coq &
         \GV &
-        splitting &
+        splits &
         named &
         \NO &
         \MAYBE &
@@ -246,7 +260,7 @@ which are conveninently combined using operations from the resource algebra.
         this work &
         Agda &
         \Calculus &
-        splitting &
+        splits &
         co-de Bruijn &
         \YES &
         \YES &
@@ -262,7 +276,7 @@ which are conveninently combined using operations from the resource algebra.
     \end{minipage}
 \end{table}
 
-\Cref{tab:comparison} summarizes a comparison of our formalization with the
+\Cref{tab:comparison} summarizes the comparison of our formalization with the
 aforementioned ones. The three leftmost colums list the reference papers (sorted
 by publication date), the proof assistant and the formalized calculus.
 %
@@ -271,15 +285,15 @@ acronym. Some acronyms, like \CP~\cite{Wadler14} and
 \GV~\cite{GayVasconcelos10,Wadler14} are well known in the literature on session
 types. It should be noted that the actual calculus being formalized usually
 differs from (typically, is a strict subset of) the one identified by the
-acronym, but it retains some of its key features. We use \SessionPI to denote
-(variants of) the session-based $\pi$-calculus presented by
+acronym, but it retains at least some of its key features. We use \SessionPI to
+denote (variants of) the session-based $\pi$-calculus presented by
 \citet{HondaVasconcelosKubo98} and \LinearPI to denote (variants of) the linear
 $\pi$-calculus~\cite{KobayashiPierceTurner99}, into which binary sessions can be
-encoded using explicit continuation channels as described by
-\citet{Kobayashi02b} and \citet{DardhaGiachinoSangiorgi17}. Finally, we use \SCP
-for the structural version of \CP introduced by \citet{SanoKavanaghPientka23}
-and \Calculus for our calculus, a linear version of \CP with explicit
-continuations.
+encoded using explicit continuation channels as described by \citet[extended
+version]{Kobayashi02b} and \citet{DardhaGiachinoSangiorgi17}. Finally, we use
+\SCP for the structural version of \CP introduced by
+\citet{SanoKavanaghPientka23} and \Calculus for our calculus, a linear version
+of \CP with explicit continuations.
 
 The four middle columns of \Cref{tab:comparison} report the relevant qualitative
 aspects of the formalizations, namely the technique used to enforce the linear
@@ -288,23 +302,23 @@ formalization is intrinsically or extrinsically typed, and whether the calculus
 makes use of continuation channels. Concerning the use of continuations, the
 approaches based directly on the linear $\pi$-calculus (into which sessions can
 be encoded) are marked with {\YES} and those based on a calculus with native
-sessions are marked with {\NO}, as expected. The calculus \SCP is marked with
-{\MAYBE} because, while not being strictly based on the linear $\pi$-calculus,
-it makes use of explicit continuations for defining the linearity predicates
-that check the linear usage of channels. Finally, all the approaches based on
-\GV are also marked with \MAYBE. In principle, \emph{none} of these calculi
-makes use of continuations. However, \GV is designed in such a way that each
-session operation acting on a channel $s$ returns the result of the operation
-(if any) \emph{along with the same channel $s$}. In this way, the type of $s$
-can be ``updated'' to take into account the effect of the operation. As observed
-by \citet{Padovani17}, this way of modelling the communication primitives is
+sessions are marked with {\NO}. The calculus \SCP is marked with {\MAYBE}
+because, while not being strictly based on the linear $\pi$-calculus, it makes
+use of explicit continuations for defining the linearity predicates that check
+the linear usage of channels. Finally, all the approaches based on \GV are also
+marked with \MAYBE. In principle, \emph{none} of these calculi makes use of
+continuations. However, \GV is designed in such a way that each session
+operation acting on a channel $s$ returns the result of the operation (if any)
+\emph{along with the same channel $s$}. In this way, the type of $s$ can be
+``updated'' to take into account the effect of the operation. As observed by
+\citet{Padovani17}, this way of modeling the communication primitives is
 virtually indistinguishable from one making use of explicit continuation
 channels.
 
 The rightmost columns of \Cref{tab:comparison} report the \emph{size} (in
 kilobytes) of the formalizations as rough (and possibly questionable) estimates
-of their complexity. Instead of counting line numbers, which may depend on code
-indentation styles and syntactical constraints of the proof assistant being
+of their complexity. Instead of counting line numbers, which may be affected by
+code indentation styles and syntactical constraints of the proof assistant being
 used, we have counted the number of characters after comments have been removed
 and spaces have been squeezed.\footnote{Sequences of two or more consecutive
 space-like characters are collapsed into a single space. The squeezing is
@@ -323,22 +337,22 @@ the size of the part of the development that uses it.
 
 In general, it is difficult to draw firm conclusions on the effectiveness of the
 various approaches in addressing the linearity challenge because the
-formalizations differ substantially in terms of reference calculus, feature
-coverage, proof assistant, process/expression/channel representation, handling
-of linearity. Also, most of them predate the publication of the linearity
-challenge~\cite{CarboneEtAl24}, hence they are not necessarily targeted towards
-that particular problem. However, some of
+formalizations differ widely for a variety of entangled factors including the
+reference calculus, supported features, proof assistant,
+process/expression/channel representation, handling of linearity. Also, most
+formalizations predate the publication of the linearity
+challenge~\cite{CarboneEtAl24}, hence they are not necessarily targeted to
+solving that particular problem. However, some of
 them~\cite{RouvoetPoulsenKrebbersVisser20,ZalakainDardha21,SanoKavanaghPientka23,ZackonEtAl25}
 are explicitly motivated by the complexity arising from the linear usage of
 resources/channels and from context splitting in particular.
 
 Based on the available data, we can make the following observations.
 %
-Context splitting, which is very well represented, does not seem to be a good
-indicator of the complexity of the formalization, since it spans the whole range
-of formalization sizes. In particular, our formalization is based on context
-splitting and covers full \CP~\cite{Wadler14}, yet it is by far the smallest
-one.
+The use of context splitting, which is very well represented, does not seem to
+be a good indicator of the complexity of the formalization, since it spans the
+whole range of sizes. Our formalization is based on context splitting and it is
+the only one that covers \CP in full, yet it is by far the smallest one.
 
 The largest formalizations~\cite{GotoEtAl16,CastroFerreiraYoshida20} are also
 the ones that adopt a locally nameless representation of channels. In this
@@ -354,44 +368,30 @@ the two aspects are not completely independent.
 There is no strong evidence that the intrinsically typed representation of
 processes reduces the size of the formalization. As observed in
 \Cref{sec:process-agda}, this choice may help reducing the overall number of
-datatypes to be defined, but the definitions are necessarily more involved. In
-the end, it seems plausible to speculate that the effort for representing
-processes, types and typing rules is not substantially different overall.
+datatypes to be defined, but the definitions are also more involved because they
+incorporate invariants and the proofs of typing preservation. In the end, it
+seems plausible to speculate that the effort for representing processes, types
+and typing rules is not substantially different overall.
 
 Finally, it seems that the use of (explicit) continuations helps taming the
 complexity of the formalization more than anything else. Indeed, the six
 smallest formalizations (excluding the deadlock freedom results) -- with an
 average size of around 62kb -- are all based on continuations, whether they are
 explicit (\LinearPI, \SCP, \LCP) or ``virtual'' (\GV), while the remaining ones
-are 263kb on average. This observation is in agreement with the observations we
-made earlier in this paper concerning the difference between \emph{updating}
+are 263kb on average. This observation is in agreement with the considerations
+we made earlier in this paper concerning the difference between \emph{updating}
 bindings versus \emph{removing and adding} bindings in a typing context. The
 adoption of continuations enables a clean linear management of channels and
 avoids the need for strong updates on the typing context.
 
-% It is also interesting to note that
-% whereby \SCP, which the authors~\citet{SanoKavanaghPientka23} do not relate
-% directly to the linear $\pi$-calculus, relies on explicit continuations to tame
-% the complexity of resource management. Our comparison suggests that this aspect,
-% more than the structural treatment of contexts, 
+% It is also interesting to note that whereby \SCP, which the
+% authors~\citet{SanoKavanaghPientka23} do not relate directly to the linear
+% $\pi$-calculus, relies on explicit continuations to tame the complexity of
+% resource management. Our comparison suggests that this aspect, more than the
+% structural treatment of contexts, 
 
 % \citet{SanoKavanaghPientka23} do not relate it directly to the linear
 % $\pi$-calculus.
 
 % più che il trattamento strutturale dei contesti (ed evitare lo splitting) è
 % l'uso delle continuazione a fare la differenza
-
-In this work we have focused on models and theories of \emph{binary sessions},
-but there are also formalizations of \emph{multiparty session types}, notably
-those of \citet{JacobsBalzerKrebbers22a} and \citet{TiroreBengstonCarbone25},
-which are notoriously more complex than those of binary session types. Just to
-give an example, the formalization of \citet{TiroreBengstonCarbone25} amounts to
-more than 1Mb of Coq code.
-
-FARE CONFRONTO TRA LCP E IL CALCOLO NELLA CHALLENGE PER DIRE CHE NON SI RIESCONO
-A MODELLARE TUTTI I PROCESSI, MAGARI SI PUÒ FARE UN ESEMPIO NELLA SEZIONE SUL
-CALCOLO.
-
-PARLARE DI CP E DI PI CALCOLO LINEARE
-
-BELLIN E SCOTT?
