removed citation to linear logic

--- a/paper/calculus.tex
+++ b/paper/calculus.tex
@@ -487,8 +487,8 @@ corresponding to the derivation for $\wtp{}\Context$.
 The typing rules are shown in \Cref{tab:typing-rules}. Since they are in
 one-to-one correspondence with -- and have exactly the same structure of -- the
 proof rules of classical linear logic, the reader may refer to the standard
-literature on linear logic~\cite{Girard87} or propositions as
-sessions~\citep{Wadler14} for their interpretation.
+literature on linear logic or propositions as sessions~\citep{Wadler14} for
+their interpretation.
 
 % \begin{example}
 %     \label{ex:typing-booleans}
