--- a/paper/main.tex
+++ b/paper/main.tex
@@ -105,7 +105,7 @@
 %% Sample for unstructured abstract %%
 %%==================================%%
 
-\abstract{blah}
+\input{abstract}
 
 %%================================%%
 %% Sample for structured abstract %%
